# nanoswipe

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.js
.github/workflows/: docker-publish.yml  release.yml
NanoSwipe-Omni/: .gitignore  README.md  package-lock.json  package.json
NanoSwipe-Omni/apps/capacitor/: README.md  capacitor.config.ts  package.json
NanoSwipe-Omni/apps/capacitor/scripts/: build-android.mjs
NanoSwipe-Omni/apps/tauri/: README.md  package.json
NanoSwipe-Omni/apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
NanoSwipe-Omni/apps/tauri/src-tauri/src/: main.rs
NanoSwipe-Omni/apps/web/: index.html  package.json  vite.config.js
NanoSwipe-Omni/apps/web/public/: manifest.webmanifest  sw.js
NanoSwipe-Omni/apps/web/src/: App.vue  main.js  platformRuntime.js  style.css
NanoSwipe-Omni/apps/web/src/components/: SearchModal.vue  SwipeContainer.vue  VideoCard.vue
NanoSwipe-Omni/apps/web/src/services/: historyService.js  hlsLoader.js  moontvApi.js
NanoSwipe-Omni/apps/web/src/stores/: player.js  source.js
NanoSwipe-Omni/apps/web/src/views/: SettingsView.vue
src/components/: SearchModal.vue  SwipeContainer.vue  VideoCard.vue
src/router/: index.js
src/services/: cmsApi.js  historyService.js  hlsPlayer.js  moontvApi.js
src/stores/: player.js  source.js
src/views/: SwipeView.vue
