[package]
name = "nanoswipe_omni"
version = "0.1.0"
description = "NanoSwipe Omni desktop shell"
authors = ["NanoSwipe"]
edition = "2021"

[build-dependencies]
# Tauri CLI generates the native build context

tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["api-all", "devtools"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
